	* Composite images now can have alpha transparency, when background is non-opaque
	* Background layer now can use transparency like any other layer
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Lasso tool can be configured to shrink selection based on the selection channel - right click the tool icon
	* Clone tool can be configured to work in unaligned mode - right click the tool icon
	* Ctrl+Left click now positions clone source when using clone tool
	* Ctrl+Right click now deletes last point when making polygonal selection (from a closed polygon, deletes the point nearest to cursor)
	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
	* Zooming now can use mouse cursor position as its fixed point (Preferences->Interface->Zoom on cursor position)
	* Scroll wheel zoom now works for view window too
	* "Hide image" and "View alpha as an overlay" can now be toggled separately for each layer (Preferences->General->Enable overlays by layer)
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2 for details
	* XPM files with 65-92 colours are now saved with smaller size
	* Raw RGB palette files (6-bit PAL and 8-bit ACT) can now be loaded/saved via the Palette menu
	* TIFF compression made configurable
	* Dimensions can now be specified when loading SVG files
	* SVG files now can be loaded through 'rsvg-convert', in absence of GTK+2 librsvg plugin
	* Animation cycles can now specify sequence steps as containing several layers, or none : See handbook section 9.3.3 for details
	* Image loading and new image creation are now undoable by default
	* Committing paste when changing tool is now enabled by default
	* Saving an image now commits paste if auto commit mode is enabled
	* "Scale canvas" and "Resize canvas" now remember their aspect ratio toggle setting