@@ -15,6 +15,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Background layer now can use transparency like any other layer
 	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
 	* Lasso tool can be configured to shrink selection based on the selection channel - right click the tool icon
+	* Clone tool is now continuous
 	* Clone tool can be configured to work in unaligned mode - right click the tool icon
 	* Ctrl+Left click now positions clone source when using clone tool
 	* Ctrl+Right click now deletes last point when making polygonal selection (from a closed polygon, deletes the point nearest to cursor)
